# sgs_test

./: .gitignore  Dockerfile  Readme.md  Readmi.md  docker-compose.yml  pyproject.toml
main/images/: filters.py  forms.py  models.py  services.py  urls.py  views.py
main/images/migrations/: 0001_initial.py
main/images/templates/: create.html  delete.html  list.html  update.html
main/login/: forms.py  urls.py  views.py
main/login/management/commands/: creatadmin.py
main/login/templates/: base_login.html  login.html  registration.html  update_password.html
main/main/: settings.py  urls.py
main/web/static/css/: style.css
main/web/templates/: base.html  paginator.html
